now compatible go-swagger format such changes don't get overwritten
