# models/option_price.go
@@ -1,0 +1,132 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// OptionPrice option price
+//
+// swagger:model option-price
+type OptionPrice struct {
+
+	// value between 0 and 1
+	// Required: true
+	RiskFreeRate *float64 `json:"risk-free-rate"`
+
+	// volatility as a value between 0 and 1
+	// Required: true
+	Sigma *float64 `json:"sigma"`
+
+	// spot price
+	// Required: true
+	SpotPrice *float64 `json:"spot-price"`
+
+	// strike price
+	// Required: true
+	StrikePrice *float64 `json:"strike-price"`
+
+	// time to maturity in years
+	// Required: true
+	TimeToMaturity *float64 `json:"time-to-maturity"`
+}
+
+// Validate validates this option price
+func (m *OptionPrice) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateRiskFreeRate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSigma(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSpotPrice(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateStrikePrice(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTimeToMaturity(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *OptionPrice) validateRiskFreeRate(formats strfmt.Registry) error {
+
+	if err := validate.Required("risk-free-rate", "body", m.RiskFreeRate); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *OptionPrice) validateSigma(formats strfmt.Registry) error {
+
+	if err := validate.Required("sigma", "body", m.Sigma); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *OptionPrice) validateSpotPrice(formats strfmt.Registry) error {
+
+	if err := validate.Required("spot-price", "body", m.SpotPrice); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *OptionPrice) validateStrikePrice(formats strfmt.Registry) error {
+
+	if err := validate.Required("strike-price", "body", m.StrikePrice); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *OptionPrice) validateTimeToMaturity(formats strfmt.Registry) error {
+
+	if err := validate.Required("time-to-maturity", "body", m.TimeToMaturity); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *OptionPrice) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *OptionPrice) UnmarshalBinary(b []byte) error {
+	var res OptionPrice
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
